# get_list

./: README.md  pyproject.toml
tests/: test_api.py
tests/get_papers/: exporter.py
tests/get_papers/get_papers/: parser.py
tests/get_papers/get_papers/get_papers/: api.py  main.py
